objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Post an image (200px wide, transparent .PNG recommended) in the &quot;Product Images&quot; folder of Documents.  Copy the Record ID (in the URL) of the new document and paste it here.</inlineHelpText>
        <label>Image ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <description>Used by the Org Customizer (Heroku) to display photos of products.</description>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 300, 512)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Img_URL__c</fullName>
        <label>Small Img URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != &apos;&apos; || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <label>purl</label>
        <type>Text</type>
    </fields>
</CustomObject>